[Mac][Material Design] Get Omnibox table width from dropdown window.

Under Material Design the suggestion table is the width of the
Omnibox window. OmniboxPopupViewMac::PositionPopup() took this width
from -[BrowserWindowController omniboxPopupAnchorRect], which
returns the empty rect in the unit test test harness. This resulted
in a zero-width table that tripped a DCHECK when called from
OmniboxPopupViewMacTest.UpdatePopupAppearance.

With this change the Omnibox grabs the window width direclty from the
Omnibox textfield's window, which is available under normal usage
and in the test harness.

R=avi@chromium.org
BUG=609312

Review-Url: https://codereview.chromium.org/1951143002
Cr-Commit-Position: refs/heads/master@{#391860}

Former-commit-id: d60d2a2181c8d3a635eb17d784dfd3402b8c8c92